--- a/styles.css
+++ b/styles.css
@@ -24,17 +24,25 @@ html, body {
   box-shadow: inset 0 0 0 var(--debug-outline) var(--foreground-colour);
 }
 
+html {
+  background-color: red;
+}
+
+body {
+  background-color: blue;
+}
+
 #page {
   height: 100%;
   width: 100%;
 }
 
 /* This allows content to extend into the notch/safe area */
-@supports (padding: env(safe-area-inset-top)) {
+/* @supports (padding: env(safe-area-inset-top)) {
   body {
     padding-top: env(safe-area-inset-top);
     padding-right: env(safe-area-inset-right);
     padding-bottom: env(safe-area-inset-bottom);
     padding-left: env(safe-area-inset-left);
   }
-}
+} */
