--- a/styles.css
+++ b/styles.css
@@ -9,12 +9,12 @@
 }
 
 html, body {
-  height: 200vh;
+  height: 100%;
   width: 100%;
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
-  overflow: visible;
+  overflow: auto;
   background-color: var(--background-colour);
   color: var(--foreground-colour);
   font-family: var(--font-family);
